今天的学习时间完成了

--- a/1.python基础.md
+++ b/1.python基础.md
@@ -25,3 +25,47 @@ python3
 python3 test.py
 ```
 
+## 基础语法
+
+### 1. 六种常见字面量类型
+
+| 类型          | 描述|
+|:--------------|:---|
+| Number        | int <br/> float <br/> complex <br/> bool |
+| String        | 文本 |
+| List          | 有序的可变序列 |
+| Tuple         | 有序的不可变序列 |
+| Set           | 无序不重复集合 |
+| Dictionary    | 无序key-value集合 |
+
+```python
+# test2.py
+
+666
+13.14
+"黑马程序员"
+
+print(666)
+print(13.14)
+print("黑马程序员")
+```
+
+### 2. 注释
+```python
+'''
+多行注释
+'''
+
+"""
+多行注释
+"""
+
+# 单行注释
+```
+
+### 3. 变量
+
+变量的定义格式: `变量名称 = 变量值`
+
+详情查看 `test3.py` 文件
+
