字符串格式化

--- a/1.python基础.md
+++ b/1.python基础.md
@@ -69,3 +69,258 @@ print("黑马程序员")
 
 详情查看 `test3.py` 文件
 
+### 4. 数据结构
+
+#### 4.1 查看数据类型
+
+```python
+# 查看数据类型
+type(变量)
+
+print(type(123)) # <class 'int'>
+print(type(12.34)) # <class 'float'>
+print(type('hello')) # <class'str'>
+print(type(True)) # <class 'bool'>
+print(type(None)) # <class 'NoneType'>
+print(type(print)) # <class 'builtin_function_or_method'>
+
+a=123
+print(type(a)) # <class 'int'>
+```
+
+#### 4.2 类型转换
+
+```python
+# 类型转换
+int(x) # 将x转换为整数
+float(x) # 将x转换为浮点数
+str(x) # 将x转换为字符串
+bool(x) # 将x转换为布尔值
+```
+
+
+#### 4.3 标识符
+
+标识符是用来标识变量、函数、类、模块等名称的字母数字组合。
+
+- 第一个字符必须是字母或下划线 `_`
+- 其他字符可以是字母、数字或下划线
+- 大小写敏感
+- 不能使用关键字
+
+关键字
+
+```python
+and       del       from      not       while
+as        elif      global    or        with
+assert    else      if        pass      yield
+break     except    import    print
+class     exec      in        raise
+continue  finally   is        return
+def       for       lambda    try
+```
+
+#### 4.4 运算符
+
+| 运算符 | 描述 | 实例 |
+|:-------|:-----|:-----|
+| `+`    | 加法 | `2 + 3` 输出 `5` |
+| `-`    | 减法 | `2 - 3` 输出 `-1` |
+| `*`    | 乘法 | `2 * 3` 输出 `6` |
+| `/`    | 除法 | `3 / 2` 输出 `1.5` |
+| `//`   | 整除 | `3 // 2` 输出 `1` |
+| `%`    | 取模 | `3 % 2` 输出 `1` |
+| `**`   | 幂 | `2 ** 3` 输出 `8` |
+| `=`    | 赋值 | `a = 2` |
+| `+=`   | 增量赋值 | `a += 2` 等价于 `a = a + 2` |
+| `-=`   | 减量赋值 | `a -= 2` 等价于 `a = a - 2` |
+| `*=`   | 乘量赋值 | `a *= 2` 等价于 `a = a * 2` |
+| `/=`   | 除量赋值 | `a /= 2` 等价于 `a = a / 2` |
+| `//=`  | 整除量赋值 | `a //= 2` 等价于 `a = a // 2` |
+| `%=`   | 取模量赋值 | `a %= 2` 等价于 `a = a % 2` |
+| `**=`  | 幂量赋值 | `a **= 2` 等价于 `a = a ** 2` |
+| `==`   | 等于 | `2 == 2` 输出 `True` |
+| `!=`   | 不等于 | `2!= 3` 输出 `True` |
+| `<`    | 小于 | `2 < 3` 输出 `True` |
+| `>`    | 大于 | `3 > 2` 输出 `True` |
+| `<=`   | 小于等于 | `2 <= 2` 输出 `True` |
+| `>=`   | 大于等于 | `3 >= 2` 输出 `True` |
+| `is`   | 身份运算符 | `a is b` 输出 `True` |
+| `is not` | 非身份运算符 | `a is not b` 输出 `True` |
+| `in`   | 成员运算符 | `a in b` 输出 `True` |
+| `not in` | 非成员运算符 | `a not in b` 输出 `True` |
+| `and`  | 逻辑与 | `True and True` 输出 `True` |
+| `or`   | 逻辑或 | `True or False` 输出 `True` |
+| `not`  | 逻辑非 | `not True` 输出 `False` |
+
+#### 4.5 字符串的三种格式
+
+- 单引号 `'`
+- 双引号 `"`
+- 三引号 `'''` 或 `"""`
+
+```python
+# 单引号 (字符串)
+str1 = 'hello world'
+
+
+# 双引号 (字符串)
+str2 = "hello world"
+
+
+# 三引号 (多行字符串)
+str3 = '''hello world'''
+
+```
+
+#### 4.5.1 字符串的拼接
+
+ 字符串的拼接有三种方式
+
+```python
+# 字符串的拼接
+str1 = 'hello'
+str2 = 'world'
+
+# 方式1
+str3 = str1 + str2
+print(str3) # output: helloworld
+
+# 方式2 占位符
+# %s 代表字符串或要转化成字符串的变量/值，
+# %d 代表整数或要转化成整数的变量/值
+# %f 代表浮点数或要转化成浮点数的变量/值
+message = 'Hello %s, how are you?' % 'yanbeirong'
+print(message) # output: Hello yanbeirong, how are you?
+
+# 多个占位符
+str3 = '%s %s' % (str1, str2)
+print(str3) # output: hello world
+
+# 方式3
+str3 = '{}{}'.format(str1, str2)
+print(str3) # output: helloworld
+```
+
+#### 4.5.2 字符串的格式化
+
+```python
+# 字符串的格式化
+name = 'yanbeirong'
+age = 28
+
+# 方式1
+str1 = 'My name is %s, and I am %d years old.' % (name, age)
+print(str1) # output: My name is yanbeirong, and I am 28 years old.
+
+# 方式2
+str2 = 'My name is {}, and I am {} years old.'.format(name, age)
+print(str2) # output: My name is yanbeirong, and I am 28 years old.
+```
+
+##### 4.5.2.1 字符串的格式化符号
+
+| 符号 | 描述 |
+|:-----|:-----|
+| `%s` | 格式化字符串 |
+| `%d` | 格式化整数 |
+| `%f` | 格式化浮点数 |
+| `%x` | 格式化十六进制整数 |
+| `%o` | 格式化八进制整数 |
+| `%e` | 格式化科学计数法 |
+| `%g` | 格式化通用浮点数 |
+| `%c` | 格式化字符 |
+| `%%` | 格式化百分号 |
+
+##### 4.5.2.2 字符串的格式化宽度和精度
+
+我们可以使用 `m.n` 来指定字符串的宽度和精度。
+
+- `m` 控制宽度，字符串的最小宽度为 `m`，如果字符串的长度小于 `m`，则在左侧填充空格。
+- `.n` 控制精度，小数点后保留 `n` 位，如果 `n` 为 `0`，则省略小数点及后面的位数。
+
+```python
+# 字符串的格式化宽度和精度
+num = 3.1415926
+
+# 方式1
+str1 = '%.2f' % num
+print(str1) # output: 3.14
+
+
+# 方式2
+str2 = '{:.2f}'.format(num)
+print(str2) # output: 3.14  
+```
+
+#### 4.5.3 字符串的切片
+
+```python
+# 字符串的切片
+str1 = 'hello world'
+
+# 方式1
+str2 = str1[0:5]
+print(str2) # output: hello
+
+# 方式2
+str2 = str1[:5]
+print(str2) # output: hello
+
+# 方式3
+str2 = str1[6:]
+print(str2) # output: world
+
+# 方式4
+str2 = str1[-5:]
+print(str2) # output: world
+
+
+# 字符串的步长切片
+str1 = 'hello world'
+
+# 方式1
+str2 = str1[0:5:2]
+print(str2) # output: heo
+
+# 方式2
+str2 = str1[::2]
+print(str2) # output: hlowrd
+```
+
+#### 4.5.4 字符串的常用方法
+
+```python
+# 字符串的常用方法
+str1 = 'hello world'
+
+# 方式1
+str2 = str1.upper()
+print(str2) # output: HELLO WORLD
+
+# 方式2
+str2 = str1.lower()
+print(str2) # output: hello world
+
+# 方式3
+str2 = str1.replace('l', 'L')
+print(str2) # output: heLLo worLd
+
+# 方式4
+str2 = str1.split()
+print(str2) # output: ['hello', 'world']
+
+
+# 字符串的格式化
+name = 'yanbeirong'
+age = 28
+
+# 方式1
+str1 = 'My name is %s, and I am %d years old.' % (name, age)
+print(str1) # output: My name is yanbeirong, and I am 28 years old.
+
+
+# 方式2
+str2 = 'My name is {}, and I am {} years old.'.format(name, age)
+print(str2) # output: My name is yanbeirong, and I am 28 years old.
+```
