字符串格式化

--- a/1.python基础.md
+++ b/1.python基础.md
@@ -324,3 +324,6 @@ print(str1) # output: My name is yanbeirong, and I am 28 years old.
 str2 = 'My name is {}, and I am {} years old.'.format(name, age)
 print(str2) # output: My name is yanbeirong, and I am 28 years old.
 ```
+
+https://www.bilibili.com/video/BV1qW4y1a7fU?p=24&spm_id_from=pageDriver&vd_source=e38682275909f351a497603a45ea21d2
+ 准备看P25视频
