对表达式进行格式化

--- a/1.python基础.md
+++ b/1.python基础.md
@@ -1,4 +1,17 @@
-## 第一个 python 程序
+# Python 基础
+
+## 简介
+
+Python 是一种解释型、面向对象、动态数据类型的高级编程语言。
+
+Python 是一种开源的、跨平台的、高级的、动态的语言。
+
+### 安装
+
+```bash
+sudo apt-get install python3
+```
+### 第一个 python 程序
 
 ```bash
 # 检查python3的版本
@@ -11,19 +24,15 @@ python3
 >>> print('hello world')
 ```
 
-## python 解释器
+### python 解释器
 
-`python.exe` 
+Python 解释器是 Python 编程语言的执行环境：`python.exe` 
 
 1. 翻译代码 `=》 ` 二进制文件
 
 2. 交给系统去运行
 
-使用解释器运行 `.py` 文件
-
-```bash
-python3 test.py
-```
+使用解释器运行 `.py` 文件 `python3 test.py`
 
 ## 基础语法
 
@@ -38,6 +47,7 @@ python3 test.py
 | Set           | 无序不重复集合 |
 | Dictionary    | 无序key-value集合 |
 
+
 ```python
 # test2.py
 
@@ -51,6 +61,7 @@ print("黑马程序员")
 ```
 
 ### 2. 注释
+
 ```python
 '''
 多行注释
@@ -67,7 +78,24 @@ print("黑马程序员")
 
 变量的定义格式: `变量名称 = 变量值`
 
-详情查看 `test3.py` 文件
+标识符是用来标识变量、函数、类、模块等名称的字母数字组合。
+
+- 第一个字符必须是字母或下划线
+- 其他字符可以是字母、数字或下划线
+- 大小写敏感
+- 不能使用关键字
+
+关键字
+
+```python
+and       del       from      not       while
+as        elif      global    or        with
+assert    else      if        pass      yield
+break     except    import    print
+class     exec      in        raise
+continue  finally   is        return
+def       for       lambda    try
+```
 
 ### 4. 数据结构
 
@@ -98,29 +126,7 @@ str(x) # 将x转换为字符串
 bool(x) # 将x转换为布尔值
 ```
 
-
-#### 4.3 标识符
-
-标识符是用来标识变量、函数、类、模块等名称的字母数字组合。
-
-- 第一个字符必须是字母或下划线 `_`
-- 其他字符可以是字母、数字或下划线
-- 大小写敏感
-- 不能使用关键字
-
-关键字
-
-```python
-and       del       from      not       while
-as        elif      global    or        with
-assert    else      if        pass      yield
-break     except    import    print
-class     exec      in        raise
-continue  finally   is        return
-def       for       lambda    try
-```
-
-#### 4.4 运算符
+#### 4.3 运算符
 
 | 运算符 | 描述 | 实例 |
 |:-------|:-----|:-----|
@@ -153,27 +159,13 @@ def       for       lambda    try
 | `or`   | 逻辑或 | `True or False` 输出 `True` |
 | `not`  | 逻辑非 | `not True` 输出 `False` |
 
-#### 4.5 字符串的三种格式
+#### 4.4 字符串的三种格式
 
-- 单引号 `'`
-- 双引号 `"`
-- 三引号 `'''` 或 `"""`
+- 单引号 `'` (单行字符串)
+- 双引号 `"` (单行字符串)
+- 三引号 `'''` 或 `"""` (多行字符串)
 
-```python
-# 单引号 (字符串)
-str1 = 'hello world'
-
-
-# 双引号 (字符串)
-str2 = "hello world"
-
-
-# 三引号 (多行字符串)
-str3 = '''hello world'''
-
-```
-
-#### 4.5.1 字符串的拼接
+#### 4.5 字符串的拼接
 
  字符串的拼接有三种方式
 
@@ -202,23 +194,9 @@ str3 = '{}{}'.format(str1, str2)
 print(str3) # output: helloworld
 ```
 
-#### 4.5.2 字符串的格式化
+#### 4.6 字符串的格式化
 
-```python
-# 字符串的格式化
-name = 'yanbeirong'
-age = 28
-
-# 方式1
-str1 = 'My name is %s, and I am %d years old.' % (name, age)
-print(str1) # output: My name is yanbeirong, and I am 28 years old.
-
-# 方式2
-str2 = 'My name is {}, and I am {} years old.'.format(name, age)
-print(str2) # output: My name is yanbeirong, and I am 28 years old.
-```
-
-##### 4.5.2.1 字符串的格式化符号
+##### 4.6.1 字符串的格式化符号
 
 | 符号 | 描述 |
 |:-----|:-----|
@@ -232,7 +210,7 @@ print(str2) # output: My name is yanbeirong, and I am 28 years old.
 | `%c` | 格式化字符 |
 | `%%` | 格式化百分号 |
 
-##### 4.5.2.2 字符串的格式化宽度和精度
+##### 4.6.2 字符串的格式化宽度和精度
 
 我们可以使用 `m.n` 来指定字符串的宽度和精度。
 
@@ -251,9 +229,42 @@ print(str1) # output: 3.14
 # 方式2
 str2 = '{:.2f}'.format(num)
 print(str2) # output: 3.14  
+
+
+# 方式3 f{变量名}
+str3 = f'{num:.2f}'
+print(str3) # output: 3.14
+
+name = "Yanbeirong"
+message = f"Hello, {name}!"
+print(message) # output: Hello, Yanbeirong!
+```
+#### 4.7 表达式的格式化
+表达式是指由具有明确执行结果的运算符和操作数构成的序列。
+
+```python
+# 表达式的格式化
+num1 = 10
+num2 = 3
+
+# 方式1
+result = '%d + %d = %d' % (num1, num2, num1 + num2)
+print(result) # output: 10 + 3 = 13
+
+
+# 方式2
+result = '{} + {} = {}'.format(num1, num2, num1 + num2)
+print(result) # output: 10 + 3 = 13
+
+
+# 方式3
+result = f'{num1} + {num2} = {num1 + num2}'
+print(result) # output: 10 + 3 = 13
+
 ```
 
-#### 4.5.3 字符串的切片
+
+#### 4.7 字符串的切片
 
 ```python
 # 字符串的切片
@@ -288,7 +299,7 @@ str2 = str1[::2]
 print(str2) # output: hlowrd
 ```
 
-#### 4.5.4 字符串的常用方法
+#### 4.8 字符串的常用方法
 
 ```python
 # 字符串的常用方法
