学习循环和条件的用法

--- a/1.python基础.md
+++ b/1.python基础.md
@@ -9,14 +9,15 @@ Python 是一种开源的、跨平台的、高级的、动态的语言。
 ### 安装
 
 ```bash
-sudo apt-get install python3
+# 检查python3的版本
+python3 --version # Python 3.10.12
+
+# 安装python3
+sudo apt install python3
 ```
 ### 第一个 python 程序
 
 ```bash
-# 检查python3的版本
-python3 --version # Python 3.10.12
-
 # 进入 python3 命令行
 python3
 
@@ -192,6 +193,10 @@ print(str3) # output: hello world
 # 方式3
 str3 = '{}{}'.format(str1, str2)
 print(str3) # output: helloworld
+
+# 方式4
+str3 = f'{str1} {str2}' # f 就是 format 的缩写
+print(str3) # output: helloworld
 ```
 
 #### 4.6 字符串的格式化
@@ -231,7 +236,7 @@ str2 = '{:.2f}'.format(num)
 print(str2) # output: 3.14  
 
 
-# 方式3 f{变量名}
+# 方式3 f{变量名:宽度.精度f}
 str3 = f'{num:.2f}'
 print(str3) # output: 3.14
 
@@ -240,6 +245,7 @@ message = f"Hello, {name}!"
 print(message) # output: Hello, Yanbeirong!
 ```
 #### 4.7 表达式的格式化
+
 表达式是指由具有明确执行结果的运算符和操作数构成的序列。
 
 ```python
@@ -271,82 +277,231 @@ stock_code = '000001' # 股票代码
 stock_price_daily_growth_factor = 0.2 # 日增长率
 growth_days = 7 # 增长天数
 
-finally_stock_price = f"经过 {growth_days} 后，股价将达到{(stock_price * (1 + stock_price_daily_growth_factor) ** growth_days):.2f}元。"
+finally_stock_price = f"经过 {growth_days} 后，
+股价将达到{(stock_price * (1 + stock_price_daily_growth_factor) 
+** growth_days):.2f}元。"
 
 print(finally_stock_price) # output: 经过 7 后，股价将达到23.99元。
 ```
 
-#### 4.7 字符串的切片
+#### 4.8 数据输入
 
 ```python
-# 字符串的切片
-str1 = 'hello world'
+# 标准输入
+name = input('提示输入:\n')
+print(f'你输入的名字是：{name}')
 
-# 方式1
-str2 = str1[0:5]
-print(str2) # output: hello
+age = input('请输入你的年龄:')
+print(f'你的年两的类型是{type(age)}') # output: <class'str'>
+```
+### 5. 布尔类型和比较运算符
 
-# 方式2
-str2 = str1[:5]
-print(str2) # output: hello
+布尔类型是数字类型的子类型，只有两个值：`True`(本质上是1) 和 `False` (本质上是0)，可以进行逻辑运算。
 
-# 方式3
-str2 = str1[6:]
-print(str2) # output: world
+```python
+# 布尔类型
+print(True) # output: True
+print(False) # output: False
 
-# 方式4
-str2 = str1[-5:]
-print(str2) # output: world
+# 布尔运算符
+print(True and True) # output: True
+print(True and False) # output: False
+print(False and True) # output: False
+print(False and False) # output: False
 
+print(True or True) # output: True
+print(True or False) # output: True
+print(False or True) # output: True
+print(False or False) # output: False
 
-# 字符串的步长切片
-str1 = 'hello world'
+print(not True) # output: False
+print(not False) # output: True
 
-# 方式1
-str2 = str1[0:5:2]
-print(str2) # output: heo
+# 比较运算符
+print(1 == 1) # output: True
+print(1 == 2) # output: False
 
-# 方式2
-str2 = str1[::2]
-print(str2) # output: hlowrd
+print(1!= 1) # output: False
+print(1!= 2) # output: True
+
+print(1 < 2) # output: True
+print(2 < 1) # output: False
+
+print(1 > 2) # output: False
+print(2 > 1) # output: True
+
+print(1 <= 2) # output: True
+print(2 <= 1) # output: False
+
+print(1 >= 2) # output: False
+print(2 >= 1) # output: True
 ```
 
-#### 4.8 字符串的常用方法
+### 6. 条件语句
+
+条件语句是指根据条件执行相应的语句，根据条件的结果，可以进行分支选择。
 
 ```python
-# 字符串的常用方法
-str1 = 'hello world'
+# 条件语句
+num = 10
 
-# 方式1
-str2 = str1.upper()
-print(str2) # output: HELLO WORLD
+if num > 0:
+    print('正数')
+elif num < 0:
+    print('负数')
+else:
+    print('零')
 
-# 方式2
-str2 = str1.lower()
-print(str2) # output: hello world
+if num % 2 == 0:
+    print('偶数')
+else:
+    print('奇数')
 
-# 方式3
-str2 = str1.replace('l', 'L')
-print(str2) # output: heLLo worLd
+# 嵌套条件语句
+num1 = 10
+num2 = 5
 
-# 方式4
-str2 = str1.split()
-print(str2) # output: ['hello', 'world']
+if num1 > num2:
+    if num1 % 2 == 0:
+        print('num1 大于 num2 且为偶数')
+    else:
+        print('num1 大于 num2 且为奇数')
+else:
+    if num2 % 2 == 0:
+        print('num2 大于 num1 且为偶数')
+    else:
+        print('num2 大于 num1 且为奇数')
+```
+### 7. 循环语句
 
+for 循环可以遍历列表、元组、字符串、字典等数据结构，语法格式如下：
 
-# 字符串的格式化
+```python
+for 变量(或临时变量) in 数据结构(数据集):
+    语句
+```
+
+while 循环可以根据条件判断循环是否继续，语法格式如下：
+
+```python
+while 条件:
+    语句
+```
+
+```python
+# 练习 猜猜随机数
+import random
+
+random_num = random.randint(1, 100)
+
+while True:
+    guess_num = int(input('请输入你猜的数字：'))
+    if guess_num == random_num:
+        print('恭喜你猜对了！')
+        break
+    elif guess_num < random_num:
+        print('猜的数字小了，再试试吧！')
+    else:
+        print('猜的数字大了，再试试吧！')
+```
+```python
+# 练习 乘法口诀表
+i = 1
+while i < 10:
+    j = 1
+    while j <= i:
+        # 输出到控制台，end='' 表示不换行
+        print(f'{i}*{j}={i*j}\t', end='')
+        j += 1
+    i += 1
+    print() # 输出换行
+
+while i in range(1, 10):
+    while j in range(1, i+1):
+        print(f'{i}*{j}={i*j}', end='\t')
+    print()
+
+for i in range(1, 10): # [1~10)
+    for j in range(1, i+1):
+        print(f'{i}*{j}={i*j}', end='\t')
+    print()
+
+# 练习 for 循环
 name = 'yanbeirong'
-age = 28
+for letter in name:
+    print(letter, end='')
+print()
 
-# 方式1
-str1 = 'My name is %s, and I am %d years old.' % (name, age)
-print(str1) # output: My name is yanbeirong, and I am 28 years old.
+# 练习 计算字符串中 a 的个数
+name=input("What is your name? ")
+count=0
+for i in name:
+    if i == 'a':
+        count+=1
+print("Your name has", count, "a's in it.")
+```
+#### range 函数
+
+1. `range(num)` 函数可以生成一个从 0 到 num-1 的整数序列。
+2. `range(start, stop)` 函数可以生成一个从 start 到 stop-1 的整数序列。
+3. `range(start, stop, step)` 函数可以生成一个从 start 到 stop-1 步长为 step 的整数序列。
+
+```python
+for i in range(0,100,2):
+    print(i,end=' ')
+print()
+
+stop = input("请输入一个结束数字: ")
+count = 0
+for i in range(1, int(stop)+1):
+    if i%2 == 0:
+        count += 1
+print("偶数的个数为:", count)
+```
+#### 变量的作用域
 
 
-# 方式2
-str2 = 'My name is {}, and I am {} years old.'.format(name, age)
-print(str2) # output: My name is yanbeirong, and I am 28 years old.
+> 在大多数现代编程语言中，`for` 循环中声明的临时变量仅在循环体内部是可见的，即它们的作用域被限制在循环体内。循环结束后，这些变量通常就不再存在，或者不能被循环外的代码访问。这样做的好处是可以防止变量名污染外部作用域，并且可以避免潜在的变量名冲突。
+
+然而，Python中的for循环不会创建新的作用域。在Python中，**作用域是按函数、类、模块等定义的，而并非由控制流语句（如for循环、if语句等）创建**。这意味着在for循环内部声明或修改的变量，在循环外部也是可见且可访问的。
+
+#### 循环中断
+
+在Python中，`break` 语句可以用来中断循环，`continue` 语句可以用来跳过当前的迭代。
+
+```python
+# 循环中断
+for i in range(1, 10):
+    if i == 5:
+        break
+    print(i, end=' ')
+print()
+
+
+for i in range(1, 10):
+    if i == 5:
+        continue
+    print(i, end=' ')
+print()
 ```
 
-https://www.bilibili.com/video/BV1qW4y1a7fU?p=24&spm_id_from=pageDriver&vd_source=e38682275909f351a497603a45ea21d2
- 准备看P25视频
+```python
+# 练习发工资：
+# 如果绩效分为5分以下，则不发放工资；
+# 如果绩效分为5分到10分，则发放1000元工资；
+import random
+
+amount = 10000
+
+for i in range(1, 21):
+    if amount <= 0:
+        print("余额不足，活动结束！")
+        break
+    j = random.randint(1, 11)
+    if j < 5:
+        print(f"您的绩效分为{j}，不足5分，请继续努力！")
+    else:
+        amount -= 1000
+        print(f"恭喜您，您是第{i}位员工，您的绩效分数为{j}，您获得了1000元工资！")
+print(f"本次活动共发放{10000 -amount}元工资,还剩{amount}元未发放！")
+```
