--- a/1.python基础.md
+++ b/1.python基础.md
@@ -440,7 +440,7 @@ for i in name:
         count+=1
 print("Your name has", count, "a's in it.")
 ```
-#### range 函数
+#### 7.1 range 函数
 
 1. `range(num)` 函数可以生成一个从 0 到 num-1 的整数序列。
 2. `range(start, stop)` 函数可以生成一个从 start 到 stop-1 的整数序列。
@@ -458,14 +458,14 @@ for i in range(1, int(stop)+1):
         count += 1
 print("偶数的个数为:", count)
 ```
-#### 变量的作用域
+#### 7.2 变量的作用域
 
 
 > 在大多数现代编程语言中，`for` 循环中声明的临时变量仅在循环体内部是可见的，即它们的作用域被限制在循环体内。循环结束后，这些变量通常就不再存在，或者不能被循环外的代码访问。这样做的好处是可以防止变量名污染外部作用域，并且可以避免潜在的变量名冲突。
 
 然而，Python中的for循环不会创建新的作用域。在Python中，**作用域是按函数、类、模块等定义的，而并非由控制流语句（如for循环、if语句等）创建**。这意味着在for循环内部声明或修改的变量，在循环外部也是可见且可访问的。
 
-#### 循环中断
+#### 7.3 循环中断
 
 在Python中，`break` 语句可以用来中断循环，`continue` 语句可以用来跳过当前的迭代。
 
@@ -504,4 +504,14 @@ for i in range(1, 21):
         amount -= 1000
         print(f"恭喜您，您是第{i}位员工，您的绩效分数为{j}，您获得了1000元工资！")
 print(f"本次活动共发放{10000 -amount}元工资,还剩{amount}元未发放！")
+```
+
+### 8. 函数
+
+函数是指具有特定功能的代码块，可以重复使用，提高代码的可读性和可维护性。
+
+```python
+# 体验函数
+name = 'Yanbeirong'
+print(len(name))   # 统计字符串长度，output: 11
 ```
