2024年4月21日学习

--- a/1.python基础.md
+++ b/1.python基础.md
@@ -514,4 +514,826 @@ print(f"本次活动共发放{10000 -amount}元工资,还剩{amount}元未发放
 # 体验函数
 name = 'Yanbeirong'
 print(len(name))   # 统计字符串长度，output: 11
+
+# 定义函数
+def 函数名(参数列表):
+    语句
+    return 返回值
+
+# 调用函数
+函数名(参数)
+
+# 练习
+def cetiwen(tw):
+    if int(tw) > 37.5:
+        print(f"你的体温是{tw}℃ ,需要隔离")
+    else:
+        print(f'你的体温是{tw}℃ ,体温正常，请进！')
+
+
+cetiwen(input("请输入您的体温: "))
 ```
+#### 8.1 返回值
+函数的返回值可以是任意类型，也可以没有返回值。
+
+```python
+# 无返回值函数，返回值是 None
+def print_hello():
+    print('Hello, world!')
+
+
+# 有返回值函数，返回值是 10
+def my_sum(a, b):
+    return a + b
+
+print(my_sum(1, 2)) # output: 3
+```
+#### 8.2 说明文档
+
+```python
+# 函数的说明文档
+def my_sum(a, b):
+    """
+    计算两个数的和
+    :param a: 第一个数
+    :param b: 第二个数
+    :return: 两个数的和
+    """
+    return a + b
+
+print(my_sum(1, 2)) # output: 3
+print(my_sum.__doc__) # output: 计算两个数的和
+```
+
+#### 8.3 作用域
+
+> 在函数内部，如果对变量进行赋值，则该变量的作用域就变成了函数内部，而不是全局变量。因此，函数内部的变量只能在函数内部访问，函数之外不能访问。
+
+global 语句可以声明全局变量，使得函数内部的变量可以被其他函数访问。
+
+```python
+# 函数内部变量的作用域
+x = 10
+
+def my_func():
+    global x
+    x = 20
+    print(x)
+
+my_func()
+print(x) # output: 20
+```
+
+#### 8.4 关键字参数
+
+关键字参数是指在函数调用时，可以按照参数名指定参数值，而不是按照顺序指定参数值。
+
+```python
+# 关键字参数
+def my_max(a, b):
+    if a > b:
+        return a
+    else:
+        return b
+
+print(my_max(a=10, b=20)) # output: 20
+print(my_max(b=20, a=10)) # output: 20
+```
+
+#### 8.5 默认参数
+
+默认参数是指在函数定义时，可以为参数指定默认值，当函数调用时，如果没有指定参数值，则使用默认值。
+
+```python
+# 默认参数
+def my_max(a, b=10):
+    if a > b:
+        return a
+    else:
+        return b
+
+
+print(my_max(10)) # output: 10
+print(my_max(20, 10)) # output: 20
+```
+
+#### 8.6 可变参数
+
+可变参数是指在函数定义时，可以将任意数量的参数传入，这些参数将以元组的形式传入。
+
+```python
+# 可变参数
+def my_sum(*args):
+    result = 0
+    for i in args:
+        result += i
+    return result
+
+print(my_sum(1, 2, 3)) # output: 6
+print(my_sum(1, 2, 3, 4, 5)) # output: 15
+```
+
+#### 8.7 匿名函数
+
+匿名函数是指没有函数名的函数，可以直接使用 `lambda` 关键字定义。
+
+```python
+# 匿名函数
+add = lambda x, y: x + y
+print(add(1, 2)) # output: 3
+```
+
+#### 8.8 递归函数
+
+递归函数是指函数自己调用自己。
+
+```python
+# 递归函数
+def my_factorial(n):
+    if n == 1:
+        return 1
+    else:
+        return n * my_factorial(n-1)
+
+print(my_factorial(5)) # output: 120
+```
+### 9. 数据容器
+
+数据容器是指可以存储多个值的容器，包括列表、元组、集合、字典等。
+
+#### 9.1 列表
+
+列表是一种有序的集合，可以存储任意类型的数据。
+
+```python
+# 基本语法
+my_list = [元素1, 元素2, 元素3, ...]
+
+my_list = [1, 2, 3, 4, 5]
+print(my_list) # output: [1, 2, 3, 4, 5]
+```
+##### 9.1.1 列表的索引
+
+列表的索引是指访问列表中的元素的位置。
+
+```python
+# 列表的索引
+# [start:stop:step]
+print(my_list[0]) # output: 1
+print(my_list[-1]) # output: 5
+print(my_list[1:3]) # output: [2, 3]
+print(my_list[::2]) # output: [1, 3, 5]
+```
+
+##### 9.1.2 列表的操作
+
+列表的操作包括：
+1. `list.index(obj)`：返回列表中指定元素的索引，如果元素不存在，则抛出 ValueError 异常。
+2. `list.insert(index, obj)`：在列表指定位置插入元素,返回 None。
+3. `list.append(obj)`：在列表末尾添加元素,返回 None。
+4. `list.extend(list)`：将列表添加到另一个列表末尾，返回 None。
+5. `list1 + list2`：将两个列表合并,返回一个新的列表。
+6. `list * n`：将列表重复 n 次,返回一个新的列表。
+7. `del list[index]`：删除列表指定位置元素 `obj`，返回 None。
+8. `list.pop()`：删除列表末尾元素,返回该元素。
+5. `list.pop(index)`：删除列表指定位置元素,返回该元素。
+6. `list.remove(obj)`：删除列表中第一个匹配的指定元素,返回 None。
+7. `list.reverse()`：反转列表。
+8. `list.sort()`：排序列表。
+9. `list.count(obj)`：统计列表中指定元素出现的次数。
+10. `list.clear()`：清空列表，返回 None。
+11. `len(list)`：返回列表长度。
+
+##### 9.1.3 列表的遍历
+
+列表的遍历包括：
+1. `for 变量 in 列表: 语句`：遍历列表，将列表中的元素逐个赋值给变量。
+2. `for i, 变量 in enumerate(列表): 语句`：遍历列表，同时获取元素的索引和值。
+3. `for i in range(len(列表)): 语句`：遍历列表，获取元素的索引。
+
+```python
+# 列表的遍历
+my_list = [1, 2, 3, 4, 5]
+
+for i in my_list:
+    print(i)
+
+for i, value in enumerate(my_list):
+    print(i, value)
+
+for i in range(len(my_list)):
+    print(i, my_list[i])
+
+def list_while_loop():
+    my_list = [1, 2, 3, 4, 5]
+    i = 0
+    while i < len(my_list):
+        print(my_list[i])
+        i += 1
+
+list_while_loop()
+
+def list_for_loop():
+    my_list = [1, 2, 3, 4, 5]
+    for item in my_list:
+        print(item)
+
+list_for_loop()
+```
+
+#### 9.2 元组
+
+元组是一种不可变的列表，一旦创建，其元素不能修改。
+
+```python
+# 基本语法
+my_tuple = (元素1, 元素2, 元素3, ...)
+
+my_tuple = (1, 2, 3, 4, 5)
+print(my_tuple) # output: (1, 2, 3, 4, 5)
+```
+
+##### 9.2.1 元组的操作
+
+元组的操作与列表的操作相同，但元组不能修改。
+
+```python
+# 元组的操作
+
+my_tuple = (1, 2, 3, 4, 5)
+my_tuple2 = ()
+my_tuple3 = tuple()
+
+# 定义单个元祖时，需要在元素后面添加逗号,否则会被当作括号
+my_tuple2 = (1,)
+my_tuple3 = (1) 
+print(type(my_tuple2))# output: <class 'tuple'>
+print(type(my_tuple3))# output: <class 'int'>
+
+# 元组的遍历
+for i in my_tuple:
+    print(i)
+
+for i, value in enumerate(my_tuple):
+    print(i, value)
+
+
+def tuple_while_loop():
+    my_tuple = (1, 2, 3, 4, 5)
+    i = 0
+    while i < len(my_tuple):
+        print(my_tuple[i])
+        i += 1
+
+tuple_while_loop()
+
+def tuple_for_loop():
+    my_tuple = (1, 2, 3, 4, 5)
+    for item in my_tuple:
+        print(item)
+
+tuple_for_loop()
+
+# 元组的索引
+print(my_tuple[0]) # output: 1
+print(my_tuple[-1]) # output: 5
+print(my_tuple[1:3]) # output: (2, 3)
+print(my_tuple[::2]) # output: (1, 3, 5)
+
+# 元组的运算
+print(my_tuple + my_tuple2) # output: (1, 2, 3, 4, 5, 1)
+print(my_tuple * 2) # output: (1, 2, 3, 4, 5, 1, 2, 3, 4, 5)
+print(len(my_tuple)) # output: 5
+print(1 in my_tuple) # output: True
+print(10 in my_tuple) # output: False
+print(my_tuple.index(3)) # output: 2
+print(my_tuple.count(3)) # output: 1
+
+# 元组的函数
+print(my_tuple.count(3)) # output: 1
+print(my_tuple.index(3)) # output: 2
+print(len(my_tuple)) # output: 0
+```
+
+#### 9.3 集合
+
+集合是一种无序的集合，可以存储任意类型的数据。
+
+```python
+# 基本语法
+my_set = {元素1, 元素2, 元素3, ...}
+
+my_set = {1, 2, 3, 4, 5}
+print(my_set) # output: {1, 2, 3, 4, 5}
+```
+
+#### 9.4 字符串的操作
+
+字符串是字符的容器。字符串也不可以修改，只能进行读取操作。
+
+```python
+# 字符串的基本语法
+my_string = 'Hello, world!'
+
+# 字符串的索引
+print(my_string[0]) # output: 'H'   
+print(my_string[-1]) # output: '!'
+print(my_string[1:3]) # 注意：左闭右开 output: 'el'
+print(my_string[::2]) # output: 'Hlowrd'
+
+# 字符串的遍历
+for i in my_string:
+    print(i)
+
+for i, value in enumerate(my_string):
+    print(i, value)
+
+def string_while_loop():
+    my_string = 'Hello, world!'
+    i = 0
+    while i < len(my_string):
+        print(my_string[i])
+        i += 1
+
+string_while_loop()
+
+def string_for_loop():
+    my_string = 'Hello, world!'
+    for item in my_string:
+        print(item)
+
+string_for_loop()
+
+# 字符串的操作
+print(my_string + '!') # output: 'Hello, world!!'
+print(my_string * 2) # output: 'Hello, world!Hello, world!'
+print(len(my_string)) # output: 13
+print(1 in my_string) # output: True
+print(10 in my_string) # output: False
+print(my_string.index('l')) # output: 2
+print(my_string.count('l')) # output: 3
+print(my_string.replace('l', 'L')) # 将字符串中的指定字符替换为另一个字符 output: 'HeLLo, worLd!'
+print(my_string.capitalize()) # 首字母大写 output: 'Hello, world!'
+print(my_string.upper()) # 将字符串全部转换为大写 output: 'HELLO, WORLD!'
+print(my_string.lower()) # 将字符串全部转换为小写 output: 'hello, world!' 
+print(my_string.split()) # 分割字符串,默认以空格分割 output: ['Hello', 'world!']
+print(my_string.split(',')) # 分割字符串,以指定字符分割 output: ['Hello','world!']
+print(my_string.strip()) # 去除字符串两端的空格 output: 'Hello, world!'
+print(my_string.strip('!')) # 去除字符串两端的指定字符 output: 'Hello, world'))
+print(my_string.strip('ab')) # 去除字符串两端的指定字符,可以同时指定多个字符 output: 'Hello, world!'
+print(my_string.lstrip()) # 去除字符串左侧的空格 output: 'Hello, world!'
+print(my_string.rstrip()) # 去除字符串右侧的空格 output: 'Hello, world!'
+print(my_string.splitlines()) # 以换行符分割字符串,返回一个列表 output: ['Hello, world!']
+print(my_string.join(['a', 'b', 'c'])) # 以指定字符连接字符串 output: 'aHello, world!bHello, world!c'
+print(my_string.startswith('H')) # 字符串是否以指定字符开头 output: True
+print(my_string.endswith('d!')) # 字符串是否以指定字符结尾 output: True
+print(my_string.find('l')) # 查找字符串中指定字符第一次出现的位置 output: 2
+print(my_string.rfind('l')) # 查找字符串中指定字符最后一次出现的位置 output: 9
+print(my_string.isnumeric()) # 字符串是否全部为数字 output: False
+print(my_string.isalpha()) # 字符串是否全部为字母 output: False
+print(my_string.isdigit()) # 字符串是否全部为数字 output: False
+print(my_string.isalnum()) # 字符串是否全部为字母或数字 output: False
+print(my_string.isspace()) # 字符串是否全部为空格 output: False
+print(my_string.islower()) # 字符串是否全部为小写 output: True
+print(my_string.isupper()) # 字符串是否全部为大写 output: False
+print(my_string.istitle()) # 字符串是否全部为标题格式 output: True
+```
+#### 9.5 数据容器(序列)的切片
+
+序列的切片是指从序列中取出一部分元素，并生成一个新的序列。
+
+1. 序列是指内容连续的元素的集合，包括列表、元组、字符串等。
+2. 切片是指从序列中取出一部分元素，并生成一个新的序列。
+
+切片的语法：
+
+```python
+# 切片的语法
+# [start:stop:step] 开始索引:结束索引:步长
+# start: 切片开始的索引，默认为0
+# stop: 切片结束的索引，默认为序列的长度
+# step: 切片的步长，默认为1, 负数表示逆序切片
+```
+
+```python
+# 序列的切片
+my_list = [1, 2, 3, 4, 5]
+my_tuple = (1, 2, 3, 4, 5)
+my_string = 'Hello, world!'
+
+# 列表的切片
+print(my_list[1:3]) # output: [2, 3]
+print(my_list[::2]) # output: [1, 3, 5]
+
+# 元组的切片
+print(my_tuple[1:3]) # output: (2, 3)
+print(my_tuple[::2]) # output: (1, 3, 5)
+
+
+# 字符串的切片
+print(my_string[1:3]) # output: 'el'
+print(my_string[::2]) # output: 'Hlowrd'
+```
+
+#### 10. set 集合
+
+set 集合是一种无序且不重复的集合，可以存储任意类型的数据。
+
+```python
+# 基本语法
+my_set = {元素1, 元素2, 元素3, ...}
+my_set = set() # 创建空集合
+
+my_set = {1, 2, 3, 4, 5}
+print(my_set) # output: {1, 2, 3, 4, 5}
+```
+
+##### 10.1 set 集合的操作
+
+set 集合的操作包括：
+1. `set.add(obj)`：添加元素到集合，返回 None。
+2. `set.remove(obj)`：删除集合中第一个匹配的指定元素，如果元素不存在，则抛出 KeyError 异常。
+3. `set.discard(obj)`：删除集合中第一个匹配的指定元素，如果元素不存在，则不抛出异常。
+4. `set.pop()`：随机删除集合中的一个元素，返回该元素。
+5. `set.clear()`：清空集合，返回 None。
+6. `set.union(set)`：求两个集合的并集，返回一个新的集合。
+7. `set.intersection(set)`：求两个集合的交集，返回一个新的集合。
+8. `set.difference(set)`：求两个集合的差集，返回一个新的集合。
+9. `set.symmetric_difference(set)`：求两个集合的对称差集，返回一个新的集合。
+10. `set.update(set)`：更新集合，将另一个集合中的元素添加到当前集合中，返回 None。
+11. `set.intersection_update(set)`：更新集合，仅保留当前集合和另一个集合的交集，返回 None。
+12. `set.difference_update(set)`：更新集合，仅保留当前集合和另一个集合的差集，返回 None。
+13. `set.symmetric_difference_update(set)`：更新集合，仅保留当前集合和另一个集合的对称差集，返回 None。
+14. `set.issubset(set)`：判断当前集合是否是另一个集合的子集，返回布尔值。
+15. `set.issuperset(set)`：判断当前集合是否是另一个集合的超集，返回布尔值。
+16. `set.isdisjoint(set)`：判断当前集合是否和另一个集合没有交集，返回布尔值。
+17. `len(set)`：返回集合的长度。
+
+```python
+# set 集合的操作
+my_set = {1, 2, 3, 4, 5}
+
+
+# 添加元素
+my_set.add(6)
+print(my_set) # output: {1, 2, 3, 4, 5, 6}
+
+# 删除元素  
+my_set.remove(2)
+print(my_set) # output: {1, 3, 4, 5, 6}
+
+# 随机删除元素
+my_set.pop()
+print(my_set) # output: {1, 3, 4, 5}
+
+# 集合的运算
+my_set2 = {4, 5, 6, 7, 8}
+
+# 并集
+print(my_set.union(my_set2)) # output: {1, 2, 3, 4, 5, 6, 7, 8}
+
+# 交集
+print(my_set.intersection(my_set2)) # output: {4, 5}
+
+# 差集
+print(my_set.difference(my_set2)) # output: {1, 2, 3}
+
+# 对称差集
+print(my_set.symmetric_difference(my_set2)) # output: {1, 2, 3, 6, 7, 8}
+
+# 更新集合
+my_set.update(my_set2)
+print(my_set) # output: {1, 2, 3, 4, 5, 6, 7, 8}
+
+# 交集更新
+my_set.intersection_update(my_set2)
+print(my_set) # output: {4, 5}
+
+# 差集更新
+my_set.difference_update(my_set2)
+print(my_set) # output: {1, 2, 3}
+
+# 对称差集更新
+my_set.symmetric_difference_update(my_set2)
+print(my_set) # output: {1, 2, 3, 6, 7, 8}
+
+# 判断子集
+print(my_set.issubset(my_set2)) # output: True
+
+# 判断超集
+print(my_set.issuperset(my_set2)) # output: False
+
+# 判断是否无交集
+print(my_set.isdisjoint(my_set2)) # output: False
+
+# 集合的长度
+print(len(my_set)) # output: 6
+
+# 集合的遍历,集合没有索引，因此不能使用索引遍历(while)
+for item in my_set:
+    print(item)
+```
+#### 11. dict 字典
+
+字典是一种无序的键值对的集合，可以存储任意类型的数据。
+
+1. 字典中的键必须是不可变对象，如字符串、数字、元组等。
+2. 字典中的键必须是唯一的，不能重复。
+3. 字典中的值可以是任意类型的数据。
+
+```python
+# 基本语法
+my_dict = {键1:值1, 键2:值2, 键3:值3, ...}
+my_dict = {} # 创建空字典
+
+my_dict = {'name': 'Yanbei', 'age': 25, 'city': 'Beijing'}
+print(my_dict) # output: {'name': 'Yanbei', 'age': 25, 'city': 'Beijing'}
+```
+
+##### 11.1 字典的操作
+
+dict 字典的操作包括：
+1. `dict[key] = value`：添加或修改字典中的元素，返回 None。
+2. `del dict[key]`：删除字典中指定键的元素，返回 None。
+3. `dict.get(key, default=None)`：获取字典中指定键的值，如果键不存在，则返回 default 值。
+4. `dict.keys()`：获取字典中所有键的集合。
+5. `dict.values()`：获取字典中所有值的集合。
+6. `dict.items()`：获取字典中所有键值对的集合。
+7. `len(dict)`：获取字典中键值对的数量。
+
+
+```python
+# dict 字典的操作
+my_dict = {'name': 'Yanbei', 'age': 25, 'city': 'Beijing'}
+
+# 添加或修改元素
+my_dict['gender'] = 'Male'
+print(my_dict) # output: {'name': 'Yanbei', 'age': 25, 'city': 'Beijing', 'gender': 'Male'}
+
+
+# 删除元素
+del my_dict['age']
+print(my_dict) # output: {'name': 'Yanbei', 'city': 'Beijing', 'gender': 'Male'}
+my_dict.pop('gender')
+print(my_dict) # output: {'name': 'Yanbei', 'city': 'Beijing'}
+
+# 清空元素
+my_dict.clear()
+print(my_dict) # output: {}
+
+
+# 获取键
+print(my_dict.keys()) # output: dict_keys(['name', 'city'])
+print(list(my_dict.keys())) # output: ['name', 'city']
+
+
+# 获取值
+print(my_dict.values()) # output: dict_values(['Yanbei', 'Beijing'])
+print(list(my_dict.values())) # output: ['Yanbei', 'Beijing']
+
+
+# 获取键值对
+print(my_dict.items()) # output: dict_items([('name', 'Yanbei'), ('city', 'Beijing')])
+print(list(my_dict.items())) # output: [('name', 'Yanbei'), ('city', 'Beijing')]
+
+
+# 获取元素
+print(my_dict.get('name')) # output: 'Yanbei'
+print(my_dict.get('age', 30)) # output: 30
+
+
+# 遍历字典
+for key in my_dict:
+    print(key, my_dict[key])
+
+for key, value in my_dict.items():
+    print(key, value)
+
+
+# 字典的长度
+print(len(my_dict)) # output: 3
+```
+
+#### 12. 容器的通用操作
+
+Python 中有很多容器，如列表、元组、集合、字典等。这些容器都有一些共同的操作，如：
+1. 索引：通过索引可以访问容器中的元素。
+2. 切片：通过切片可以获取容器的一部分元素。
+3. 迭代：通过迭代可以遍历容器中的元素。
+4. 成员资格：通过成员资格可以判断元素是否在容器中。
+5. 长度：通过长度可以获取容器中元素的数量。
+6. 运算：通过运算可以对容器进行一些操作，如并、交、差、对称差等。
+
+```python
+# 统计最大值
+my_list = [1, 2, 3, 4, 5]
+print(max(my_list)) # output: 5
+
+# 统计最小值
+print(min(my_list)) # output: 1
+
+# 统计和
+print(sum(my_list)) # output: 15
+
+# 统计平均值
+print(sum(my_list) / len(my_list)) # output: 3.0
+
+# 列表的排序
+my_list.sort()
+print(my_list) # output: [1, 2, 3, 4, 5]
+
+# 列表的反转
+my_list.reverse()
+print(my_list) # output: [5, 4, 3, 2, 1]
+
+# 列表的拷贝
+my_list_copy = my_list.copy()
+print(my_list_copy) # output: [5, 4, 3, 2, 1]
+
+# 列表的元素计数
+print(my_list.count(2)) # output: 1
+
+
+# 元组的排序
+my_tuple = (1, 2, 3, 4, 5)
+my_tuple_sorted = sorted(my_tuple)
+print(my_tuple_sorted) # output: (1, 2, 3, 4, 5)
+
+# 元组的反转
+my_tuple_reversed = reversed(my_tuple)
+print(list(my_tuple_reversed)) # output: [5, 4, 3, 2, 1]
+
+# 元组的元素计数
+print(my_tuple.count(2)) # output: 1
+
+
+# 集合的并、交、差、对称差
+my_set1 = {1, 2, 3}
+my_set2 = {2, 3, 4}
+
+# 并集
+print(my_set1.union(my_set2)) # output: {1, 2, 3, 4}
+
+# 交集
+print(my_set1.intersection(my_set2)) # output: {2, 3}
+
+# 差集
+print(my_set1.difference(my_set2)) # output: {1}
+
+# 对称差集
+print(my_set1.symmetric_difference(my_set2)) # output: {1, 4}
+
+
+# 字典的合并
+my_dict1 = {'name': 'Yanbei', 'age': 25}
+my_dict2 = {'city': 'Beijing', 'gender': 'Male'}
+
+# 合并字典
+my_dict1.update(my_dict2)
+print(my_dict1) # output: {'name': 'Yanbei', 'age': 25, 'city': 'Beijing', 'gender': 'Male'}
+```
+
+### 10.ASCII码表
+
+ASCII 码表是一张字符与其对应的 ASCII 码的对照表。
+
+每一个 ASCII 码都对应一个字符，ASCII 码的范围是 0~127，其中 0~31 是控制字符，32~127 是可显示字符。
+
+字符串进行比较就是比较每个字符的 ASCII 码值的大小。
+
+字符串是按位比较的，每个字符占 1 个字节，每个字节有 8 个二进制位，所以每个字符的 ASCII 码值占 8 个二进制位。
+
+字符串是按位比较的，所以字符串的长度是字节的长度，而不是字符的长度。
+
+
+| 十进制 | 十六进制 | 字符 | 描述 |
+| --- | --- | --- | --- |
+| 0 | 0x00 | NUL | 空字符 |
+| 1 | 0x01 | SOH | 开始标题 |
+| 2 | 0x02 | STX | 开始正文 |
+| 3 | 0x03 | ETX | 结束正文 |
+| 4 | 0x04 | EOT | 结束传输 |
+| 5 | 0x05 | ENQ | 请求 |
+| 6 | 0x06 | ACK | 确认 |
+| 7 | 0x07 | BEL | 响铃 |
+| 8 | 0x08 | BS | 退格 |
+| 9 | 0x09 | HT | 水平制表符 |
+| 10 | 0x0A | LF | 换行 |
+| 11 | 0x0B | VT | 垂直制表符 |
+| 12 | 0x0C | FF | 换页 |
+| 13 | 0x0D | CR | 回车 |
+| 14 | 0x0E | SO | 锁定 shift 键 |
+| 15 | 0x0F | SI | 解锁 shift 键 |
+| 16 | 0x10 | DLE | 数据链路终止 |
+| 17 | 0x11 | DC1 | 设备控制 1 |
+| 18 | 0x12 | DC2 | 设备控制 2 |
+| 19 | 0x13 | DC3 | 设备控制 3 |
+| 20 | 0x14 | DC4 | 设备控制 4 |
+| 21 | 0x15 | NAK | 否认 |
+| 22 | 0x16 | SYN | 同步 |
+| 23 | 0x17 | ETB | 结束标记 |
+| 24 | 0x18 | CAN | 取消 |
+| 25 | 0x19 | EM | 结束编辑 |
+| 26 | 0x1A | SUB | 子 |
+| 27 | 0x1B | ESC | 转义 |
+| 28 | 0x1C | FS | 文件分隔符 |
+| 29 | 0x1D | GS | 组分隔符 |
+| 30 | 0x1E | RS | 记录分隔符 |
+| 31 | 0x1F | US | 单元分隔符 |
+| 32 | 0x20 | SP | 空格 |
+| 33 | 0x21 | ! | 叹号 |
+| 34 | 0x22 | " | 双引号 |
+| 35 | 0x23 | # | 井号 |
+| 36 | 0x24 | $ | 美元符 |
+| 37 | 0x25 | % | 百分号 |
+| 38 | 0x26 | & | 与符号 |
+| 39 | 0x27 | ' | 单引号 |
+| 40 | 0x28 | ( | 左括号 |
+| 41 | 0x29 | ) | 右括号 |
+| 42 | 0x2A | * | 星号 |
+| 43 | 0x2B | + | 加号 |
+| 44 | 0x2C | , | 逗号 |
+| 45 | 0x2D | - | 减号 |
+| 46 | 0x2E | . | 句号 |
+| 47 | 0x2F | / | 斜杠 |
+| 48 | 0x30 | 0 | 0 |
+| 49 | 0x31 | 1 | 1 |
+| 50 | 0x32 | 2 | 2 |
+| 51 | 0x33 | 3 | 3 |
+| 52 | 0x34 | 4 | 4 |
+| 53 | 0x35 | 5 | 5 |
+| 54 | 0x36 | 6 | 6 |
+| 55 | 0x37 | 7 | 7 |
+| 56 | 0x38 | 8 | 8 |
+| 57 | 0x39 | 9 | 9 |
+| 58 | 0x3A | : | 冒号 |
+| 59 | 0x3B | ; | 分号 |
+| 60 | 0x3C | < | 小于号 |
+| 61 | 0x3D | = | 等于号 |
+| 62 | 0x3E | > | 大于号 |
+| 63 | 0x3F | ? | 问号 |
+| 64 | 0x40 | @ | 帽子 |
+| 65 | 0x41 | A | 大写 A |
+| 66 | 0x42 | B | 大写 B |
+| 67 | 0x43 | C | 大写 C |
+| 68 | 0x44 | D | 大写 D |
+| 69 | 0x45 | E | 大写 E |
+| 70 | 0x46 | F | 大写 F |
+| 71 | 0x47 | G | 大写 G |
+| 72 | 0x48 | H | 大写 H |
+| 73 | 0x49 | I | 大写 I |
+| 74 | 0x4A | J | 大写 J |
+| 75 | 0x4B | K | 大写 K |
+| 76 | 0x4C | L | 大写 L |
+| 77 | 0x4D | M | 大写 M |
+| 78 | 0x4E | N | 大写 N |
+| 79 | 0x4F | O | 大写 O |
+| 80 | 0x50 | P | 大写 P |
+| 81 | 0x51 | Q | 大写 Q |
+| 82 | 0x52 | R | 大写 R |
+| 83 | 0x53 | S | 大写 S |
+| 84 | 0x54 | T | 大写 T |
+| 85 | 0x55 | U | 大写 U |
+| 86 | 0x56 | V | 大写 V |
+| 87 | 0x57 | W | 大写 W |
+| 88 | 0x58 | X | 大写 X |
+| 89 | 0x59 | Y | 大写 Y |
+| 90 | 0x5A | Z | 大写 Z |
+| 91 | 0x5B | [ | 左中括号 |
+| 92 | 0x5C | \ | 反斜杠 |
+| 93 | 0x5D | ] | 右中括号 |
+| 94 | 0x5E | ^ |  Circumflex 符号 |
+| 95 | 0x5F | _ | 下划线 |
+| 96 | 0x60 | ` | 反引号 |
+| 97 | 0x61 | a | 小写 a |
+| 98 | 0x62 | b | 小写 b |
+| 99 | 0x63 | c | 小写 c |
+| 100 | 0x64 | d | 小写 d |
+| 101 | 0x65 | e | 小写 e |
+| 102 | 0x66 | f | 小写 f |
+| 103 | 0x67 | g | 小写 g |
+| 104 | 0x68 | h | 小写 h |
+| 105 | 0x69 | i | 小写 i |
+| 106 | 0x6A | j | 小写 j |
+| 107 | 0x6B | k | 小写 k |
+| 108 | 0x6C | l | 小写 l |
+| 109 | 0x6D | m | 小写 m |
+| 110 | 0x6E | n | 小写 n |
+| 111 | 0x6F | o | 小写 o |
+| 112 | 0x70 | p | 小写 p |
+| 113 | 0x71 | q | 小写 q |
+| 114 | 0x72 | r | 小写 r |
+| 115 | 0x73 | s | 小写 s |
+| 116 | 0x74 | t | 小写 t |
+| 117 | 0x75 | u | 小写 u |
+| 118 | 0x76 | v | 小写 v |
+| 119 | 0x77 | w | 小写 w |
+| 120 | 0x78 | x | 小写 x |
+| 121 | 0x79 | y | 小写 y |
+| 122 | 0x7A | z | 小写 z |
+| 123 | 0x7B | { | 左大括号 |
+| 124 | 0x7C | \| | 竖线 |
+| 125 | 0x7D | } | 右大括号 |
+| 126 | 0x7E | ~ | 波浪线 |
+| 127 | 0x7F | DEL | 删除 |
+
