文件的操作

--- a/1.python基础.md
+++ b/1.python基础.md
@@ -523,6 +523,13 @@ def 函数名(参数列表):
 # 调用函数
 函数名(参数)
 
+# 返回多个值
+def my_func(a, b):
+    return a + b, a - b, a * b, a / b
+
+result1, result2, result3, result4 = my_func(10, 5)
+
+
 # 练习
 def cetiwen(tw):
     if int(tw) > 37.5:
@@ -534,6 +541,7 @@ def cetiwen(tw):
 cetiwen(input("请输入您的体温: "))
 ```
 #### 8.1 返回值
+
 函数的返回值可以是任意类型，也可以没有返回值。
 
 ```python
@@ -619,10 +627,10 @@ print(my_max(20, 10)) # output: 20
 
 #### 8.6 可变参数
 
-可变参数是指在函数定义时，可以将任意数量的参数传入，这些参数将以元组的形式传入。
+可变参数是指在函数定义时，可以将任意数量的参数传入，这些参数将以 **元组** 的形式传入。
 
 ```python
-# 可变参数
+# 可变参数1：位置参数【元组】
 def my_sum(*args):
     result = 0
     for i in args:
@@ -631,6 +639,25 @@ def my_sum(*args):
 
 print(my_sum(1, 2, 3)) # output: 6
 print(my_sum(1, 2, 3, 4, 5)) # output: 15
+
+# 可变参数2：关键字参数【字典】
+def my_func(**kwargs):
+    print(kwargs)
+
+my_func(name='Yanbeirong', age=25)
+```
+
+```python
+# 命名关键字参数
+def my_max(a, b=10):
+    if a > b:
+        return a
+    else:
+        return b
+
+
+print(my_max(a=10, b=20)) # output: 20
+print(my_max(b=20, a=10)) # output: 20
 ```
 
 #### 8.7 匿名函数
@@ -639,6 +666,7 @@ print(my_sum(1, 2, 3, 4, 5)) # output: 15
 
 ```python
 # 匿名函数
+# lambda 参数列表: 返回值[只能使用一行代码：表达式]
 add = lambda x, y: x + y
 print(add(1, 2)) # output: 3
 ```
